add_executable(${PROJECT_NAME} 
	"entry.cpp"
	"Core/App.h"
	"Core/App.cpp"
	"Core/Window.h"
	"Core/Window.cpp"
	"Core/InputKeys.h"
	"Modules/ModuleInterface.h"
	"Modules/Renderer/Renderer.h"
	"Modules/Renderer/Renderer.cpp"
	"Modules/Scene/Camera.h"
	"Modules/Scene/Camera.cpp"
	"Modules/Scene/Graph.h"
	"Modules/Scene/Graph.cpp"
	"Modules/Scene/Model.h"
	"Modules/Scene/Model.cpp"
	"Modules/Scene/Node.h"
	"Modules/Scene/Node.cpp"
	"Modules/Scene/Transform.h"
	"Modules/Scene/Transform.cpp"
	"Modules/Scene/Lighting/Light.h"
	"Modules/Scene/Lighting/DirectionalLight.h"
	"Modules/Scene/Lighting/DirectionalLight.cpp"
	"Modules/Scene/Lighting/PointLight.h"
	"Modules/Scene/Lighting/PointLight.cpp"
	"Modules/Renderer/Vulkan/Buffer.h"
	"Modules/Renderer/Vulkan/Buffer.cpp"
	"Modules/Renderer/Vulkan/Descriptor.h"
	"Modules/Renderer/Vulkan/Descriptor.cpp"
	"Modules/Renderer/Vulkan/Device.h"
	"Modules/Renderer/Vulkan/Device.cpp"
	"Modules/Renderer/Vulkan/Material.h"
	"Modules/Renderer/Vulkan/Material.cpp"
	"Modules/Renderer/Vulkan/Mesh.h"
	"Modules/Renderer/Vulkan/Mesh.cpp"
	"Modules/Renderer/Vulkan/Pipeline.h"
	"Modules/Renderer/Vulkan/Pipeline.cpp"
	"Modules/Renderer/Vulkan/SwapChain.h"
	"Modules/Renderer/Vulkan/SwapChain.cpp"
	"Modules/Renderer/Vulkan/Texture.h"
	"Modules/Renderer/Vulkan/Texture.cpp"
	"Modules/Renderer/Vulkan/ValidationLayer.h"
	"Modules/Renderer/Vulkan/ValidationLayer.cpp")

set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
target_include_directories(${PROJECT_NAME} PRIVATE ${EXTERNAL_LIBS_INCLUDES})
target_link_libraries(${PROJECT_NAME} PRIVATE ${EXTERNAL_LIBS})